# tire-pressure-kata

./: README.md  pyproject.toml
tests/: conftest.py  stub_sensor.py  test_alarm.py  test_alarm_with_mock.py  test_alarm_with_stub.py
tire_pressure/: alarm.py  sensor.py
